ingress/smlite-adservice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smlite-adservice
  annotations:
     kubernetes.io/ingress.class: "tier-2-cpx"
     ingress.citrix.com/insecure-service-type: "tcp"
     ingress.citrix.com/insecure-port: "9555"
spec:
    backend:
        serviceName: adservice-app
        servicePort: 9555
