ingress/smlite-cartservice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smlite-cartservice
  annotations:
     kubernetes.io/ingress.class: "tier-2-cpx"
     ingress.citrix.com/insecure-service-type: "tcp"
     ingress.citrix.com/insecure-port: "7070"
spec:
    backend:
        serviceName: cartservice-app
        servicePort: 7070
