ingress/smlite-currencyservice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smlite-currencyservice
  annotations:
   kubernetes.io/ingress.class: "tier-2-cpx"
   ingress.citrix.com/insecure-port: "7000"
   ingress.citrix.com/secure-backend: '{"currencyservice-app": "True"}'
spec:
  rules:
  - host: currencyservice.default.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: currencyservice-app
          servicePort: 7000
  - host: currencyservice
    http:
      paths:
      - backend:
          serviceName: currencyservice-app
          servicePort: 7000
