ingress/smlite-emailservice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smlite-emailservice
  annotations:
   kubernetes.io/ingress.class: "tier-2-cpx"
   ingress.citrix.com/insecure-port: "5000"
   ingress.citrix.com/secure-backend: '{"emailservice-app": "True"}'
spec:
  rules:
  - host: emailservice.default.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: emailservice-app
          servicePort: 5000
  - host: emailservice
    http:
      paths:
      - backend:
          serviceName: emailservice-app
          servicePort: 5000
