ingress/smlite-paymentservice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smlite-paymentservice
  annotations:
   kubernetes.io/ingress.class: "tier-2-cpx"
   ingress.citrix.com/insecure-port: "50051"
   ingress.citrix.com/secure-backend: '{"paymentservice-app": "True"}'
spec:
  rules:
  - host: paymentservice.default.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: paymentservice-app
          servicePort: 50051
  - host: paymentservice
    http:
      paths:
      - backend:
          serviceName: paymentservice-app
          servicePort: 50051
