ingress/smlite-productcatalogservice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smlite-productcatalogservice
  annotations:
   kubernetes.io/ingress.class: "tier-2-cpx"
   ingress.citrix.com/insecure-port: "3550"
   ingress.citrix.com/secure-backend: '{"productcatalogservice-app": "True"}'
spec:
  rules:
  - host: productcatalogservice.default.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: productcatalogservice-app
          servicePort: 3550
  - host: productcatalogservice
    http:
      paths:
      - backend:
          serviceName: productcatalogservice-app
          servicePort: 3550
