ingress/smlite-recommendationservice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smlite-recommendationservice
  annotations:
   kubernetes.io/ingress.class: "tier-2-cpx"
   ingress.citrix.com/insecure-port: "8081"
   ingress.citrix.com/secure-backend: '{"recommendationservice-app": "True"}'
spec:
  rules:
  - host: recommendationservice.default.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: recommendationservice-app
          servicePort: 8081
  - host: recommendationservice
    http:
      paths:
      - backend:
          serviceName: recommendationservice-app
          servicePort: 8081
