ingress/smlite-shippingservice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smlite-shippingservice
  annotations:
   kubernetes.io/ingress.class: "tier-2-cpx"
   ingress.citrix.com/insecure-port: "50052"
   ingress.citrix.com/secure-backend: '{"shippingservice-app": "True"}'
spec:
  rules:
  - host: shippingservice.default.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: shippingservice-app
          servicePort: 50052
  - host: shippingservice
    http:
      paths:
      - backend:
          serviceName: shippingservice-app
          servicePort: 50052
